[docs] add API docs
